# JoDWithCodeVis

./: .gitignore  README.md  build.sh  format_client.sh  jod_codevis.lks  run_client.sh  run_server.sh  uncrustify.cfg
Client/cmake/: CMakeLists.txt
Client/src/: Main.cpp  main.cpp
client/: coding_style.txt  format_client.sh  jod_codevis.lks  run_client.sh  uncrustify.cfg
client/cmake/: CMakeLists.txt
client/src/: Main.cpp  main.cpp
cmake/: CMakeLists.txt
server/: pyproject.toml  run_quality_checks.sh  run_server.sh
server/src/: __main__.py
server/src/common/: __init__.py  math_lib.py
server/src/server/: __init__.py  server.py
server/src/server/actions/: full_update_provider.py  login_attempter.py
server/src/server/configuration/: server_properties.py
server/src/server/net/: client_acceptance_looper.py  client_connection.py  server_socket.py
server/src/server/net/message_data_handling/: __init__.py  message_data_processer.py
server/src/server/user_game_instance/: user_game_instance.py
server/src/server/user_game_instance/game_core/: engine.py
server/src/server/user_game_instance/game_core/input/keyboard/: keyboard_input.py
server/src/server/user_game_instance/game_core/input/mouse/: mouse_button.py  mouse_buttons.py  mouse_input.py
server/src/server/user_game_instance/game_core/scenes_core/: i_scene.py  scene_engine.py
server/src/server/user_game_instance/instructions/: instructions_manager.py
server/src/server/user_game_instance/theme_0/scenes/intro_scene/: intro_scene.py
server/src/server/user_game_instance/theme_0/scenes/login_scene/: login_scene.py
server/src/server/user_game_instance/theme_0/scenes/main_menu_scene/: main_menu_scene.py
server/src/server/user_game_instance/theme_0/scenes/main_scene/: main_scene.py
server/src/server/user_game_instance/theme_0/scenes/world_generation_scene/: world_generation_scene.py
src/: Main.cpp
src/Common/: Aliases.hpp  CanvasUtilities.cpp  CanvasUtilities.hpp  FileUtilities.cpp  FileUtilities.hpp  Hash.cpp  Hash.hpp  MouseUtilities.cpp  MouseUtilities.hpp  SDLDeleter.cpp  SDLDeleter.hpp  Singleton.hpp  Timer.cpp  Timer.hpp
src/Game/: Game.cpp  (+1 more)
src_server/: Main.py  main.py
(+580 files in other folders)
