[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Zmallwood", email = "zmallwood@proton.me" }
]
dependencies = [
    "ruff>=0.6.9",
    "mypy>=1.12.0",
    "pydantic>=2.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
